# fine-tune-stability

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
atlas/: __init__.py  config.py  diagnostics.py  manifest_utils.py  nstep.py  paper_analysis.py  paper_plots.py  recent_buffer.py  time_limit.py  transitions.py
atlas_training/: __init__.py  config.py  diagnostics.py  pilot.py  preflight.py  runtime.py  signals.py  util.py
benchmark/: README.md
benchmark/data/: horizon_final_return_points.csv  horizon_final_return_summary.csv  horizon_final_return_summary.json  manifest.sha256  sample_eval_log.jsonl  warning_pilot_runs.csv  warning_pilot_summary.csv  warning_pilot_summary.json
docs/: integration.md  literature_review.md  methodology.md  paper_figures_and_tables.md  paper_outline.md  paper_submission.md  pilot_runbook.md
experiments/: README.md
scripts/: preflight_pilot.py  run_all.sh  run_diagnostic.py  run_finetune.py  run_pilot.py  run_pretrain.py  run_pretrain_sensitivity.py  run_sweep.py  setup.sh
tests/: test_benchmark_data.py  test_config.py  test_diagnostics.py  test_import_boundaries.py  test_nstep.py  test_pilot.py  test_preflight_pilot.py  test_run_pretrain_sensitivity.py  test_run_sweep.py  test_training_config.py  test_training_diagnostics.py  test_training_runtime.py  test_training_signals.py  test_training_smoke.py  test_training_util.py
