[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fine-tune-stability"
version = "0.1.0"
description = "Core utilities for a fine-tuning stability atlas in robotic RL."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Codex"}]
dependencies = []

[project.optional-dependencies]
train = [
  "brax",
  "jax",
  "mujoco",
  "mujoco-mjx",
  "playground",
]

[tool.setuptools.packages.find]
include = ["atlas*", "atlas_training*"]
