[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fine-tune-stability"
version = "0.1.0"
description = "Core utilities for a fine-tuning stability atlas in robotic RL."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Codex"}]
dependencies = []

[project.optional-dependencies]
# `jax` here intentionally resolves the default CPU wheel on most systems so
# `./scripts/setup.sh --train` works for the local smoke test. GPU users should
# install the platform-specific JAX/JAXlib build that matches their accelerator.
train = [
  "brax>=0.14.2",
  "jax>=0.9.2",
  "mujoco>=3.6.0",
  "mujoco-mjx>=3.6.0",
  "playground>=0.2.0",
]

[tool.setuptools.packages.find]
include = ["atlas*", "atlas_training*"]
