[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fine-tune-stability"
version = "0.1.0"
description = "Core utilities for a fine-tuning stability atlas in robotic RL."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Codex"}]
dependencies = []

[project.optional-dependencies]
# Keep the training stack pinned to the known-good vertical-slice versions.
# GPU users should still replace the default CPU JAX wheel with the
# platform-specific CUDA build that matches their accelerator.
# `playground` is the distribution name that provides the `mujoco_playground`
# import path used by this repo.
train = [
  "brax==0.14.2",
  "jax==0.9.2",
  "mujoco==3.6.0",
  "mujoco-mjx==3.6.0",
  "playground==0.2.0",
]

[tool.setuptools.packages.find]
include = ["atlas*", "atlas_training*"]
